force-app/main/default/objects/ClickSignEnvelope__c/ClickSignEnvelope__c.object-meta.xml
<CustomObject>
    <label>ClickSign Envelope</label>
    <nameField>
        <label>Envelope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickSignEnvelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>