force-app/main/default/objects/ClickSignEnvelope__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ClickSignEnvelopes</relationshipLabel>
    <relationshipName>ClickSignEnvelopes</relationshipName>
    <type>Lookup</type>
</CustomField>