force-app/main/default/objects/ClickSignEnvelope__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ClickSignEnvelopes</relationshipLabel>
    <relationshipName>ClickSignEnvelopes</relationshipName>
    <type>Lookup</type>
</CustomField>