force-app/main/default/objects/ClickSignEnvelope__c/fields/DeadLine__c.field-meta.xml
<CustomField>
    <fullName>DeadLine__c</fullName>
    <label>DeadLine</label>
    <type>DateTime</type>
</CustomField>